--- a/index.css
+++ b/index.css
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 body {
   margin: 0;
   padding: 0;
+  font-family: "Inter", sans-serif;
 }
 
 .container {
@@ -18,6 +21,7 @@ body {
   height: 90px;
   width: 100%;
   background-color: white;
+  box-shadow: 0px 4px 11px 0px #00000026;
 }
 
 header input {
@@ -60,14 +64,38 @@ main {
 .footer-container {
   display: flex;
   justify-content: center;
+  box-shadow: 0px 4px 11px 0px #00000026;
 }
 
 .footer-color {
   display: flex;
-  border: 1px solid black;
   justify-content: center;
   align-items: center;
   width: 110px;
   height: 46px;
-  background-color: orange;
+  background-color: white;
+}
+
+.color1 {
+  background-color: #f55a5a;
+}
+
+.color2 {
+  background-color: #2b283a;
+}
+
+.color3 {
+  background-color: #fbf3ab;
+}
+
+.color4 {
+  background-color: #aad1b6;
+}
+
+.color5 {
+  background-color: #a626d3;
+}
+
+button {
+  cursor: pointer;
 }
